--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   />
   <section>
     <header>
-      <img src="https://unavatar.now.sh/telegram/eoandrw" />
+      <img src="https://avatars.githubusercontent.com/u/84384871?v=4" />
     </header>
     <h1>Andrew Reis (@eoandrw)</h1>
 
